--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         </div>
                         <!-- Break -->
                         <div class="12u$">
-                            <textarea name="Nachright" id="message" placeholder="Erzählt uns etwas über Euch und eure Pläne" rows="6" required></textarea>
+                            <textarea name="Nachricht" id="message" placeholder="Erzählt uns etwas über Euch und eure Pläne" rows="6" required></textarea>
                         </div>
                         <!-- Break -->
                         <div class="12u$">
@@ -590,7 +590,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-            <script defer src="assets/js/cookiebanner.js"></script>
+            <script src="assets/js/cookiebanner.js"></script>
             <script defer src="assets/js/scrollanim.js"></script>
             <script defer src="assets/js/slides.js"></script>
     		<script defer src="assets/js/faq.js"></script>
