shortened texts on service buttons, fixes before-after script

--- a/services.html
+++ b/services.html
@@ -252,7 +252,7 @@
 							Ein weiterer Vorteil des After-Wedding-Shootings besteht darin, dass es als Back-Up für das Paarshooting am offiziellen Hochzeitstag dienen kann. Wenn Wetter, Unwägbarkeiten oder unvorhergesehene Umstände die Durchführung des Paarshootings am Hochzeitstag beeinträchtigen, steht das After-Wedding-Shooting als flexible Alternative bereit. So könnt ihr sicher sein, dass ihr die Paarfotos bekommt, die ihr euch wünscht - unabhängig von den äußeren Bedingungen am eigentlichen Hochzeitstag.</p>
 						<p class="hidden">Meldet euch gerne bei uns, wenn ihr die Lust verspürt, euch nochmals wie am Tag eurer Hochzeit zu fühlen und einige weitere schöne Fotos von euch im Hochzeitslook zu erhalten.</p>
 						<div class="hidden">
-							<a href="index.html#kontakt" class="button alt fit">Lasst uns die Hochzeitsgefühle wieder aufleben</a>
+							<a href="index.html#kontakt" class="button alt fit">Lassen wir Hochzeitsgefühle aufleben</a>
 						</div>
 
 						<h2 class="hidden" id="paar">Paarfotografie</h2>
@@ -260,7 +260,7 @@
 							Oder lasst uns gemeinsam intime Momente einfangen – sei es ein entspannter Sonntagmorgen im Bett oder andere vertraute Augenblicke bei euch zuhause. Eure Liebe, authentisch und ungefiltert, in den eigenen vier Wänden.</p>
 						<p class="hidden">Schreibt uns gerne an, denn eure spontanen Ideen sind für uns Inspiration, und wir freuen uns darauf, gemeinsam mit euch Erinnerungen zu schaffen, die genauso einzigartig sind wie ihr.</p>
 						<div class="hidden">
-							<a href="index.html#kontakt" class="button alt fit">Lasst uns zusammen coole Bilder machen</a>
+							<a href="index.html#kontakt" class="button alt fit">Lasst uns coole Bilder machen</a>
 						</div>
 
 						<h2 class="hidden" id="immer">Das ist immer dabei</h2>
@@ -333,6 +333,6 @@
 		<script defer src="assets/js/slides.js"></script>
 		<script defer src="assets/js/back-to-top.js"></script>
 		<script defer src="assets/js/navmenu.js"></script>
-		<script defer src="assets/js/before-after-slider.js"></script>
+		<script defer src="assets/js/before-after-slider.min.js"></script>
 	</body>
 </html>
