bug fixes and small improvments on all sites

--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 				</section>
 				<section class="wrapper style1">
 					<div>
-						<a href="index.html#wir" class="button special fit">Zurück zur Startseite</a>
+						<a href="index.html" class="button special fit">Zurück zur Startseite</a>
 					</div>
 				</section>
 			</div>
