--- a/gallery.html
+++ b/gallery.html
@@ -316,7 +316,7 @@
 				</section>
 				<section class="wrapper style1">
 					<div>
-						<a href="index.html#galerie" class="button special fit">Zurück zur Startseite</a>
+						<a href="index.html" class="button special fit">Zurück zur Startseite</a>
 					</div>
 				</section>
 			</div>
