--- a/services.html
+++ b/services.html
@@ -171,6 +171,8 @@
 								<span class="circle-before"></span>
 							</div>
 							<!-- / End Single Service -->
+							</section>
+							<section class="columns section-services">
 							<!-- Single Service -->
 							<div class="single-service hidden" id="imme">
 								<div class="content">
@@ -269,10 +271,10 @@
 							Falls Ihr nach Erhalt aller Bilder den Wunsch nach zusätzlicher Bearbeitung habt, ist das problemlos möglich. Optional bieten wir gegen eine kleine Gebühr umfassende Retuschen für einzelne Bilder an, wie das Entfernen von Personen aus dem Hintergrund oder eine High-End Beauty-Retusche.</p>
 						<div class="hidden" id="before-after-slider">
 							<div id="before-image">
-								<img class="image fit flush" src="images/weddings/thumbnails/braut-kuesst-braeutigam-auf-wange.webp" alt="Foto vor der Bearbeitung" loading="lazy"/>
+								<img class="image fit flush" src="images/services-bg/photo-editing-before.webp" alt="Foto vor der Bearbeitung" loading="lazy"/>
 							</div>
 							<div id="after-image">
-								<img class="image fit flush" src="images/weddings/thumbnails/braeutigam-wird-von-trauzeugen-gekuesst.webp" alt="Foto nach der Bearbeitung" loading="lazy"/>
+								<img class="image fit flush" src="images/services-bg/paar-umarmung-sonnenuntergang.webp" alt="Foto nach der Bearbeitung" loading="lazy"/>
 							</div>
 							<div id="resizer"></div>
 						</div>
@@ -292,7 +294,7 @@
 				</section>
 				<section class="wrapper style1">
 					<div>
-						<a href="index.html#angebote" class="button special fit">Zurück zur Startseite</a>
+						<a href="index.html" class="button special fit">Zurück zur Startseite</a>
 					</div>
 				</section>
 			</div>
