commented out rss script

--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
 		<script defer src="assets/js/faq.js"></script>
 		<script defer src="assets/js/testimonials.js"></script>
 		<script defer src="assets/js/simple-lightbox.js"></script>
-		<script defer src="assets/js/rss.feed.min.js"></script>
 		<script defer src="assets/js/back-to-top.js"></script>
 		<script defer src="assets/js/navmenu.js"></script>
+		<!--<script defer src="assets/js/rss.feed.min.js"></script>-->
 	</body>
 </html>
