added whatsapp button to every page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			fbq('consent', 'revoke');
 			fbq('init', '209840151984177');
 			fbq('track', 'PageView');
+			fbq('track', 'Contact');
 		</script>
 		<noscript><img height="1" width="1" style="display:none"
 					   src="https://www.facebook.com/tr?id=209840151984177&ev=PageView&noscript=1"
@@ -550,6 +551,7 @@
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/mellowlight.wedding/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 					<li><a href="mailto:kontakt@mellowlight.de" class="icon fa-envelope-o"><span class="label" target="_blank">Email</span></a></li>
+					<li><a href="https://wa.me/+4915753301238" class="icon fa-whatsapp"><span class="label" target="_blank">Whatsapp</span></a></li>
 				</ul>
 			</div>
 		</footer>
