--- a/impressum.html
+++ b/impressum.html
@@ -75,6 +75,7 @@
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/mellowlight.wedding/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 					<li><a href="mailto:kontakt@mellowlight.de" class="icon fa-envelope-o"><span class="label" target="_blank">Email</span></a></li>
+					<li><a href="https://wa.me/+4915753301238" class="icon fa-whatsapp"><span class="label" target="_blank">Whatsapp</span></a></li>
 				</ul>
 			</div>
 		</footer>
