fixed small issue in a text

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 							</header>
 							<br/>
 							<p>Wir sind Marie-Claire und Martin, und wir möchten, dass euer Hochzeits- oder Elopement-Tag nicht nur außergewöhnlich, sondern auch voller Freude ist und stressfrei verläuft.  Fühlt euch frei, euch auszudrücken - lasst uns eure verrücktesten Ideen hören und sie gemeinsam verwirklichen. <br/>
-								Wir möchten, dass ihr das Gefühl habt, keine Hochzeitsfotografen, sondern zwei neue beste Freunde engagiert zu haben, die mit euch die einzigartige Atmosphäre eures Tages unvergesslich machen.</p>
+								Uns ist es wichtig, dass ihr das Gefühl habt, keine Hochzeitsfotografen, sondern zwei neue beste Freunde engagiert zu haben, die mit euch die einzigartige Atmosphäre eures Tages unvergesslich machen.</p>
 						</div>
 					</div>
 					<div class="content" id>
