added og:image to all sites

--- a/services.html
+++ b/services.html
@@ -5,12 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Unsere Angebote - Mellowlight Hochzeitsfotografie</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-		<meta name="description" content="Lasst uns die Individualität eurer Hochzeit einfangen
-										  . Von Hochzeitsdokumentation mit Liebe zum Detail, bis zu beeindruckenden Perspektiven – erfahrt, wie wir eure besonderen Augenblicke festhalten. Durchstöbert unsere Angebote um mehr zu entdecken.">
+		<meta name="description" content="Lasst uns die Individualität eurer Hochzeit einfangen. Von Hochzeitsdokumentation mit Liebe zum Detail, bis zu beeindruckenden Perspektiven – erfahrt, wie wir eure besonderen Augenblicke festhalten. Durchstöbert unsere Angebote um mehr zu entdecken.">
 		<meta name="keywords" content="Hochzeitsfotografie, Alternative Hochzeiten, Elopement Fotograf, Kreative Hochzeitsbilder, Entspannte Hochzeitsmomente, Mellowlight Fotografen">
 		<meta name="author" content="Mellowlight - Marie-Claire & Martin">
 		<link rel="canonical" href="https://mellowlight.de/services" />
 		<meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://mellowlight.de/images/social-image.jpeg">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 		<link rel="stylesheet" href="assets/css/main.min.css"/>
 
 		<!--Goatcounter-->
