--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,9 @@
 		<meta name="author" content="Mellowlight - Marie-Claire & Martin">
 		<link rel="canonical" href="https://mellowlight.de/gallery" />
 		<meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://mellowlight.de/images/social-image.jpeg">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 		<link rel="stylesheet" href="assets/css/main.min.css"/>
 
 		<!--Goatcounter-->
