--- a/services.html
+++ b/services.html
@@ -46,11 +46,12 @@
 			<nav role="navigation" class="top-right open hidden">
 				<a href="index.html" class="disc l1"><div>Home</div></a>
 				<a href="gallery.html" class="disc l2"><div>Gallerie</div></a>
-				<a href="about.html" class="disc l3"><div>Über uns</div></a>
-				<a href="services.html" class="disc l4"><div>Angebote</div></a>
-				<a href="index.html#fragen" class="disc l5"><div>FAQ</div></a>
-				<a href="index.html#kontakt" class="disc l6"><div>Kontakt</div></a>
-				<a class="disc l7 toggle">
+				<a href="https://blog.mellowlight.de" class="disc l3"><div>Blog</div></a>
+				<a href="about.html" class="disc l4"><div>Über uns</div></a>
+				<a href="services.html" class="disc l5"><div>Angebote</div></a>
+				<a href="index.html#fragen" class="disc l6"><div>FAQ</div></a>
+				<a href="index.html#kontakt" class="disc l7"><div>Kontakt</div></a>
+				<a class="disc l8 toggle">
 					<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#0f0817}</style><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
 				</a>
 			</nav>
@@ -169,7 +170,7 @@
 									</span>
 									<h3 class="title">Paarfotografie</h3>
 									<p class="description">Ihr müsst natürlich nicht heiraten, damit wir von euch schöne und authentische Fotos machen. Ein Paarshooting geht immer und ist eine tolle Gelegenheit eure Verbindung zueinander in lebendigen Bildern festzuhalten.</p>
-									<a href="#paar" class="learn-more">Learn More</a>
+									<a href="#paarshoot" class="learn-more">Learn More</a>
 								</div>
 								<span class="circle-before"></span>
 							</div>
@@ -260,7 +261,7 @@
 							<a href="index.html#kontakt" class="button alt fit">Lassen wir Hochzeitsgefühle aufleben</a>
 						</div>
 
-						<h2 class="hidden" id="paar">Paarfotografie</h2>
+						<h2 class="hidden" id="paarshoot">Paarfotografie</h2>
 						<p class="hidden"><span class="image left"><img src="images/services-bg/kuss-im-gruenen.webp" alt="Kuss im Grünen" loading="lazy"/></span>Ihr müsst natürlich nicht heiraten, damit wir von euch schöne und authentische Fotos machen. Eure einzigartige Verbindung in Bildern einzufangen, ist das, was uns begeistert: Sei es bei einem klassischen Outdoor-Shooting an eurem Lieblingsort, einem Besuch beim Eisdealer um die Ecke oder beim Schlendern über den Wintermarkt.<br/>
 							Oder lasst uns gemeinsam intime Momente einfangen – sei es ein entspannter Sonntagmorgen im Bett oder andere vertraute Augenblicke bei euch zuhause. Eure Liebe, authentisch und ungefiltert, in den eigenen vier Wänden.</p>
 						<p class="hidden">Schreibt uns gerne an, denn eure spontanen Ideen sind für uns Inspiration, und wir freuen uns darauf, gemeinsam mit euch Erinnerungen zu schaffen, die genauso einzigartig sind wie ihr.</p>
@@ -315,6 +316,9 @@
 			</div>
 		</footer>
 		<div class="footerlinks">
+			Wirf einen Blick in unseren Blog:   
+			<a href="https://blog.mellowlight.de/">blog.mellowlight.de</a>
+			<br/>
 			Weiteres, wie Portraits, Newborn Fotografie und Business Shoots findest du auf  
 			<a href="https://portraits.mellowlight.de/">portraits.mellowlight.de</a>
 			<br/><br/>
