--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:image" content="https://mellowlight.de/images/social-image.jpeg">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
-		<link rel="stylesheet" href="assets/css/main.css"/>
+		<link rel="stylesheet" href="assets/css/main.min.css"/>
 
 		<!--Goatcounter-->
 		<script data-goatcounter="https://mellowlight.goatcounter.com/count"
