Renamed site titles

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Das sind wir -Mellowlight Hochzeitsfotografie</title>
+		<title>Das sind wir - Hochzeitsfotografie x Mellowlight</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta name="description" content="Wir sind Marie-Claire und Martin, reiselustige Naturliebhaber, Musikenthusiasten, Vegetarier, Cappuccino-Liebhaber und vor allem Hochzeitsfotografen aus Berlin. Mehr über uns...">
 		<meta name="keywords" content="Marie-Claire und Martin, Mellowlight, Hochzeitsfotografen, Berlin, Unterfranken, Paar-Fotografie, Naturliebhaber, Reiselust, Musikenthusiasten, Vegetarier, Cappuccino-Liebhaber, Leidenschaftliche Fotografen, Kreatives Team">
