--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Galerie - Mellowlight Hochzeitsfotografie</title>
+		<title>Galerie - Hochzeitsfotografie x Mellowlight</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta name="description" content="Durchstöbere unsere Galerie mit besonderen Hochzeitsmomenten, eingefangen von Marie-Claire und Martin von Mellowlight. Jede Aufnahme erzählt eine Geschichte, schaut sie euch in Ruhe an...">
 		<meta name="keywords" content="Hochzeitsfotografie, Hochzeitsmomente, Mellowlight, Galerie, Hochzeitsfotos, Kreative Fotografie, Liebe in Bildern, Emotionale Fotografie, Einzigartige Hochzeitsmomente, Fotografenpaar">
