--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Mellowlight Hochzeitsfotografie - Laid back Hochzeits- und Paarfotografie</title>
+		<title>Hochzeitsfotografie x Mellowlight - Laid back Hochzeits- und Paarfotografie</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta name="description" content="Hochzeitsfotografie jenseits der üblichen Klischees. Als Fotografenpaar fangen wir einzigartige Momente, abseits der traditionellen Wege ein. Lasst uns eure besondere Geschichte in unvergessliche Bilder verwandeln. Mehr erfahren....">
 		<meta name="keywords" content="Hochzeitsfotografie, Alternative Hochzeiten, Elopement Fotograf, Kreative Hochzeitsbilder, Entspannte Hochzeitsmomente, Mellowlight Fotografen, Hochzeitsfotograf Berlin, Hochzeitsfotograf Unterfranken, Hochzeitsfotograf Main-Spessart">
