--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Unsere Angebote - Mellowlight Hochzeitsfotografie</title>
+		<title>Unsere Angebote - Hochzeitsfotografie x Mellowlight</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta name="description" content="Lasst uns die Individualität eurer Hochzeit einfangen. Von Hochzeitsdokumentation mit Liebe zum Detail, bis zu beeindruckenden Perspektiven – erfahrt, wie wir eure besonderen Augenblicke festhalten. Durchstöbert unsere Angebote um mehr zu entdecken.">
 		<meta name="keywords" content="Hochzeitsfotografie, Alternative Hochzeiten, Elopement Fotograf, Kreative Hochzeitsbilder, Entspannte Hochzeitsmomente, Mellowlight Fotografen">
