--- a/datenschutz.html
+++ b/datenschutz.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Datenschutzerklärung - Mellowlight Hochzeitsfotografie</title>
+		<title>Datenschutzerklärung - Hochzeitsfotografie x Mellowlight</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta name="description" content="Datenschutzerklärung von Mellowlight Hochzeitsfotografie - Laid back Hochzeits- und Paarfotografie">
 		<meta name="author" content="Mellowlight - Marie-Claire & Martin">
