--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 		<header id="header">
 			<nav role="navigation" class="top-right open hidden">
 				<a href="index.html" class="disc l1"><div>Home</div></a>
-				<a href="gallery.html" class="disc l2"><div>Gallerie</div></a>
+				<a href="gallery.html" class="disc l2"><div>Galerie</div></a>
 				<a href="https://blog.mellowlight.de" class="disc l3"><div>Blog</div></a>
 				<a href="about.html" class="disc l4"><div>Über uns</div></a>
 				<a href="services.html" class="disc l5"><div>Angebote</div></a>
@@ -90,7 +90,7 @@
 						<img class="mySlides" src="images/weddings/brautpaar-tanz-rote-blaetter.webp" alt="Brautpaar tanzt unter einem Baum mit rotem Laub" loading="lazy">
 					</div>
 					<header>
-						<h2>Gallerie</h2>
+						<h2>Galerie</h2>
 						<p>Für Paare, die es einzigartig, authentisch und entspannt lieben</p>
 					</header>
 				</section>
