--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 				<section class="wrapper style2 testim">
 					<header id="testim">
 						<h2>Was andere sagen</h2>
-						<p>Echtes Feedback unserer bisherigen Kunden</p>
+						<p>Echtes Feedback unserer bisherigen Paare</p>
 					</header>
 					<div class="wrap hidden">
 						<span id="signatura">"</span>
